--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
         <version>2.7.13</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>myBackendHomeWork</groupId>
-    <artifactId>myHw</artifactId>
+    <groupId>com.lytvyn</groupId>
+    <artifactId>serving-web-content</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>homeWork</name>
-    <description>myFirstHW</description>
+    <name>backendHW</name>
+    <description>myhomeWork</description>
     <properties>
         <java.version>11</java.version>
     </properties>
@@ -26,6 +26,11 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
